--- a/homework12/index.pug
+++ b/homework12/index.pug
@@ -30,13 +30,20 @@ html(lang="en")
                         h1.product_title Introduce Your Product Quickly & Effectively
                         p.product_text Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculusmus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
                         .product_buttons 
-                        button.product_button.button(type="button") Purchase UI Kit
-                        button.product_button.button(type="button") Learn More
+                          button.product_button.button(type="button") Purchase UI Kit
+                          button.product_button.button(type="button") Learn More
                 section.light 
                     .light_left
                         h2.light_title Light, Fast & Powerful
                         p.light_text Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculusmus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-                        .goes 
-                            img(src="../", alt="")
-                        .goes 
-                            
+                        .goes_container
+                            .goes 
+                               img.goes_img(src="../homework12/img/icon.svg", alt="title")
+                               h3.goes_title Title Goes Here
+                               p.goes_text Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. 
+                            .goes 
+                              img.goes_img(src="../homework12/img/icon.svg", alt="title")
+                              h3.goes_title Title Goes Here
+                              p.goes_text Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. 
+                    .light_right 
+                        img.right_img(src="../homework12/img/girl.png", alt="girl") 
