--- a/homework12/style.css
+++ b/homework12/style.css
@@ -19,11 +19,9 @@ body {
 
 .button {
   border-radius: 2px;
-  background: var(--colour-main-blue-800, #111B47);
-  color: var(--colour-secondary-white-100-general, #FFF);
+  background: #111B47;
+  color: #FFF;
   text-align: center;
-  -webkit-font-feature-settings: "clig" off, "liga" off;
-          font-feature-settings: "clig" off, "liga" off;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -63,17 +61,13 @@ body {
   padding: 0;
 }
 .nav_list-link {
-  color: var(--colour-main-blue-500, #505F98);
-  -webkit-font-feature-settings: "clig" off, "liga" off;
-          font-feature-settings: "clig" off, "liga" off;
+  color: #505F98;
   text-decoration: none;
   font-weight: 400;
   line-height: 24px;
 }
 .nav .logo {
-  color: var(--colour-logo-primary, #37447E);
-  -webkit-font-feature-settings: "clig" off, "liga" off;
-          font-feature-settings: "clig" off, "liga" off;
+  color: #37447E;
   font-size: 26px;
   font-weight: 900;
   line-height: 38px;
@@ -83,9 +77,7 @@ body {
   text-decoration: none;
 }
 .main .product_title {
-  color: var(--colour-main-blue-900, #091133);
-  -webkit-font-feature-settings: "clig" off, "liga" off;
-          font-feature-settings: "clig" off, "liga" off;
+  color: #091133;
   font-family: Roboto;
   font-size: 50px;
   font-weight: 500;
@@ -97,9 +89,7 @@ body {
   padding: 260px 0 390px 0;
 }
 .main .product_text {
-  color: var(--colour-main-blue-500, #505F98);
-  -webkit-font-feature-settings: "clig" off, "liga" off;
-          font-feature-settings: "clig" off, "liga" off;
+  color: #505F98;
   /* Regular 18 */
   font-family: Roboto;
   font-size: 18px;
@@ -115,11 +105,10 @@ body {
   gap: 30px;
 }
 .main .product_button {
-  display: inline-block;
   width: 189px;
   height: 36px;
   margin-right: 30px;
-  border: 2px solid var(--colour-main-blue-900, #091133);
+  border: 2px solid #091133;
   background-color: #FFF;
   color: #091133;
   font-size: 16px;
@@ -131,4 +120,57 @@ body {
 .main .product_button:hover {
   background-color: #091133;
   color: #FFF;
+}
+.main .light {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.main .light_title {
+  color: #091133;
+  /* Medium 36 */
+  font-family: Roboto;
+  font-size: 36px;
+  font-weight: 500;
+  line-height: 48px;
+  /* 133.333% */
+}
+.main .light_text {
+  color: #6F7CB2;
+  font-family: Roboto;
+  font-weight: 400;
+  line-height: 26px;
+  /* 162.5% */
+}
+.main .light .goes_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 80px;
+  gap: 30px;
+}
+.main .light .goes_title {
+  color: #091133;
+  font-weight: 500;
+  line-height: 26px;
+}
+.main .light .goes_text {
+  color: #5D6970;
+  font-family: Roboto;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 18px;
+  /* 150% */
 }
