--- a/homework12/index.pug
+++ b/homework12/index.pug
@@ -47,3 +47,30 @@ html(lang="en")
                               p.goes_text Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. 
                     .light_right 
                         img.right_img(src="../homework12/img/girl.png", alt="girl") 
+                section.lights 
+                    .lights_img 
+                        img(src="../homework12/img/girl2.png", alt="girl2")
+                    .lights_text    
+                        h2.light_title Light, Fast & Powerful
+                        p.light_text Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculusmus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+                section.lights 
+                    .lights_img 
+                        img(src="../homework12/img/undraw_mention_6k5d.png", alt="girl2")
+                    .lights_text    
+                        h2.light_title Light, Fast & Powerful
+                        p.light_text Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculusmus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+                section.lights 
+                    .lights_img 
+                        img(src="../homework12/img/undraw_social_influencer_sgsv.png", alt="girl2")
+                    .lights_text    
+                        h2.light_title Light, Fast & Powerful
+                        p.light_text Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculusmus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+                        button.lights_button.button(type="button") Purchase Now
+                section.price
+                    h2.price_title A Price To Suit Everyone
+                    p.price_text Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus 
+                    span.price_dol $40
+                    span.price_kit UI Design Kit
+                    span.price_see See, One price. Simple.
+                    br
+                    button.price_button.button(type="button") Purchase Now
