--- a/homework12/style.css
+++ b/homework12/style.css
@@ -131,6 +131,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-bottom: 100px;
 }
 .main .light_title {
   color: #091133;
@@ -173,4 +174,34 @@ body {
   font-weight: 400;
   line-height: 18px;
   /* 150% */
+}
+.main .lights {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 150px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+.main .lights_text {
+  width: 40%;
+}
+.main .price {
+  text-align: center;
+}
+.main .price_title {
+  color: #091133;
+  font-family: Roboto;
+  font-size: 36px;
+  font-weight: 500;
+  line-height: 48px;
+}
+.main .price_button {
+  display: inline;
 }
