--- a/homework12/index.pug
+++ b/homework12/index.pug
@@ -70,7 +70,38 @@ html(lang="en")
                     h2.price_title A Price To Suit Everyone
                     p.price_text Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus 
                     span.price_dol $40
-                    span.price_kit UI Design Kit
-                    span.price_see See, One price. Simple.
                     br
+                    span.price_kit UI Design Kit
+                    br
+                    span.price_see See, One price. Simple.
                     button.price_button.button(type="button") Purchase Now
+       footer.footer 
+        .container 
+            .footer_top 
+                span.footer_copyright ©2020 Yourcompany
+                a.footer_logo.logo(href="#") Landie
+                button.footer_button.button(type="button") Purchase Now
+            .footer_bottom 
+                ul.nav_list
+                    li.nav_list-item
+                        a(href="#", class="nav_list-link") Home
+                    li(class="nav_list-item") 
+                        a(href="#", class="nav_list-link") About 
+                    li(class="nav_list-item") 
+                        a(href="#", class="nav_list-link") Contact
+                ul.footer_icons 
+                    li.footer_icon 
+                        a.footer_link(href="#") 
+                            img(src="../homework12/img/facebook.png", alt="facebook")
+                    li.footer_icon 
+                        a.footer_link(href="#")
+                            img(src="../homework12/img/linked.png", alt="linked")
+                    li.footer_icon 
+                        a.footer_link(href="#")
+                            img(src="../homework12/img/twitter.png", alt="twitter")
+                    li.footer_icon 
+                        a.footer_link(href="#")
+                            img(src="../homework12/img/youtube.png", alt="youtube")
+                    li.footer_icon 
+                        a.footer_link(href="#")
+                            img(src="../homework12/img/instagram.png", alt="instagram")
