--- a/homework12/style.css
+++ b/homework12/style.css
@@ -78,10 +78,11 @@ body {
   font-weight: 400;
   line-height: 24px;
 }
+
 .main .product_title {
   color: #091133;
   font-family: Roboto;
-  font-size: 50px;
+  font-size: 3rem;
   font-weight: 500;
   line-height: 66px;
   letter-spacing: 1px;
@@ -92,13 +93,10 @@ body {
 }
 .main .product_text {
   color: #505F98;
-  /* Regular 18 */
-  font-family: Roboto;
-  font-size: 18px;
+  font-size: 1.125rem;
   font-weight: 400;
   line-height: 30px;
   margin-bottom: 70px;
-  /* 166.667% */
 }
 .main .product_buttons {
   display: -webkit-box;
@@ -113,7 +111,6 @@ body {
   border: 2px solid #091133;
   background-color: #FFF;
   color: #091133;
-  font-size: 16px;
   font-weight: 500;
   line-height: 26px;
   -webkit-transition: all 0.5s ease;
@@ -137,16 +134,13 @@ body {
 }
 .main .light_title {
   color: #091133;
-  /* Medium 36 */
-  font-family: Roboto;
-  font-size: 36px;
+  font-size: 2.2rem;
   font-weight: 500;
   line-height: 48px;
   /* 133.333% */
 }
 .main .light_text {
   color: #6F7CB2;
-  font-family: Roboto;
   font-weight: 400;
   line-height: 26px;
   /* 162.5% */
@@ -172,10 +166,9 @@ body {
 .main .light .goes_text {
   color: #5D6970;
   font-family: Roboto;
-  font-size: 12px;
+  font-size: 0.75rem;
   font-weight: 400;
   line-height: 18px;
-  /* 150% */
 }
 .main .lights {
   display: -webkit-box;
@@ -212,7 +205,7 @@ body {
 .main .price_title {
   color: #091133;
   font-family: Roboto;
-  font-size: 36px;
+  font-size: 2.25rem;
   font-weight: 500;
   line-height: 48px;
 }
@@ -240,7 +233,7 @@ body {
 .main .price_see {
   padding-top: 2rem;
   color: #5D6970;
-  font-size: 14px;
+  font-size: 0.875rem;
   font-weight: 400;
   line-height: 24px;
 }
@@ -267,7 +260,7 @@ body {
 .footer_top .footer_copyright {
   color: #939EA4;
   font-family: Roboto;
-  font-size: 14px;
+  font-size: 0.875rem;
   font-weight: 500;
   line-height: 24px;
 }
@@ -282,6 +275,9 @@ body {
       -ms-flex-align: center;
           align-items: center;
 }
+.footer .footer_bottom .nav_list-link {
+  color: #929ECC;
+}
 .footer .footer_icons {
   list-style: none;
   display: -webkit-box;
@@ -295,4 +291,53 @@ body {
           align-items: center;
   gap: 30px;
   padding: 20px 0 30px;
+}
+
+@media (max-width: 721px) {
+  img {
+    width: 100%;
+  }
+  .nav_list {
+    gap: 20px;
+  }
+  .wrapper {
+    background-image: none;
+  }
+  .main .product_container {
+    padding: 100px 0;
+    max-width: 100%;
+    text-align: center;
+  }
+  .main .product_container .product_buttons {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    gap: 0;
+  }
+  .light {
+    -ms-flex-wrap: wrap-reverse;
+        flex-wrap: wrap-reverse;
+  }
+  .light .light_left {
+    text-align: center;
+  }
+  .light .right_img {
+    width: 90%;
+  }
+  .main .lights {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .main .lights .lights_text {
+    width: 100%;
+    text-align: center;
+  }
+  .main .lights .lights_button {
+    text-align: center;
+    display: inline-block;
+  }
+  .main .price {
+    max-width: 100%;
+  }
 }
