--- a/homework12/style.scss
+++ b/homework12/style.scss
@@ -7,6 +7,7 @@ $main-grey-600: #5D6970;
 $main-blue-700: #222F65;
 $main-blue-600: #37447E;
 $main-grey-400: #939EA4;
+$main-blue-300: #929ECC;
 
 
 body {
@@ -14,7 +15,6 @@ body {
     max-width: 1440px;
     margin: 0 auto;
     font-size: 16px;
-
 }
 
 .wrapper {
@@ -77,10 +77,6 @@ body {
 
     }
 
-
-
-    &_button {}
-
 }
 
 .main {
@@ -88,7 +84,7 @@ body {
         &_title {
             color: $main-blue-900;
             font-family: Roboto;
-            font-size: 50px;
+            font-size: 3rem;
             font-weight: 500;
             line-height: 66px;
             letter-spacing: 1px;
@@ -102,13 +98,11 @@ body {
 
         &_text {
             color: $main-blue-500;
-            /* Regular 18 */
-            font-family: Roboto;
-            font-size: 18px;
+            font-size: 1.125rem;
             font-weight: 400;
             line-height: 30px;
             margin-bottom: 70px;
-            /* 166.667% */
+
         }
 
         &_buttons {
@@ -123,7 +117,6 @@ body {
             border: 2px solid $main-blue-900;
             background-color: #FFF;
             color: $main-blue-900;
-            font-size: 16px;
             font-weight: 500;
             line-height: 26px;
             transition: all 0.5s ease;
@@ -144,9 +137,7 @@ body {
 
         &_title {
             color: $main-blue-900;
-            /* Medium 36 */
-            font-family: Roboto;
-            font-size: 36px;
+            font-size: 2.2rem;
             font-weight: 500;
             line-height: 48px;
             /* 133.333% */
@@ -154,7 +145,6 @@ body {
 
         &_text {
             color: $main-blue-400;
-            font-family: Roboto;
             font-weight: 400;
             line-height: 26px;
             /* 162.5% */
@@ -178,10 +168,9 @@ body {
         .goes_text {
             color: $main-grey-600;
             font-family: Roboto;
-            font-size: 12px;
+            font-size: 0.75rem;
             font-weight: 400;
             line-height: 18px;
-            /* 150% */
         }
 
     }
@@ -211,7 +200,7 @@ body {
         &_title {
             color: $main-blue-900;
             font-family: Roboto;
-            font-size: 36px;
+            font-size: 2.25rem;
             font-weight: 500;
             line-height: 48px;
         }
@@ -244,7 +233,7 @@ body {
         &_see {
             padding-top: 2rem;
             color: $main-grey-600;
-            font-size: 14px;
+            font-size: 0.875rem;
             font-weight: 400;
             line-height: 24px;
 
@@ -270,7 +259,7 @@ body {
         .footer_copyright {
             color: $main-grey-400;
             font-family: Roboto;
-            font-size: 14px;
+            font-size: 0.875rem;
             font-weight: 500;
             line-height: 24px;
         }
@@ -280,6 +269,10 @@ body {
         display: flex;
         justify-content: space-between;
         align-items: center;
+
+        .nav_list-link {
+            color: $main-blue-300;
+        }
     }
 
     .footer_icons {
@@ -289,5 +282,60 @@ body {
         align-items: center;
         gap: 30px;
         padding: 20px 0 30px;
+    }
+}
+
+@media(max-width: 721px) {
+    img {
+        width: 100%;
+    }
+
+    .nav_list {
+        gap: 20px;
+    }
+
+    .wrapper {
+        background-image: none;
+    }
+
+    .main .product_container {
+        padding: 100px 0;
+        max-width: 100%;
+        text-align: center;
+
+        .product_buttons {
+            justify-content: center;
+            gap: 0;
+        }
+    }
+
+    .light {
+        flex-wrap: wrap-reverse;
+
+        .light_left {
+            text-align: center;
+        }
+
+        .right_img {
+            width: 90%;
+        }
+    }
+
+    .main .lights {
+        justify-content: center;
+
+        .lights_text {
+            width: 100%;
+            text-align: center;
+        }
+
+        .lights_button {
+            text-align: center;
+            display: inline-block;
+        }
+    }
+
+    .main .price {
+        max-width: 100%;
     }
 }
