--- a/homework12/index.pug
+++ b/homework12/index.pug
@@ -38,11 +38,11 @@ html(lang="en")
                         p.light_text Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculusmus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
                         .goes_container
                             .goes 
-                               img.goes_img(src="../homework12/img/icon.svg", alt="title")
+                               img.goes_img(src="../homework12/img/Icon.svg", alt="title")
                                h3.goes_title Title Goes Here
                                p.goes_text Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. 
                             .goes 
-                              img.goes_img(src="../homework12/img/icon.svg", alt="title")
+                              img.goes_img(src="../homework12/img/Icon.svg", alt="title")
                               h3.goes_title Title Goes Here
                               p.goes_text Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. 
                     .light_right 
@@ -104,4 +104,4 @@ html(lang="en")
                             img(src="../homework12/img/youtube.png", alt="youtube")
                     li.footer_icon 
                         a.footer_link(href="#")
-                            img(src="../homework12/img/instagram.png", alt="instagram")
+                            img(src="../homework12/img/instagram.png", alt="Instagram")
