--- a/homework12/style.scss
+++ b/homework12/style.scss
@@ -25,6 +25,7 @@ $main-blue-300: #929ECC;
     background-position: top right;
     background-repeat: no-repeat;
     background-size: 940px;
+    padding: 0 10px;
 }
 
 .container {
