--- a/homework13/style.css
+++ b/homework13/style.css
@@ -102,9 +102,17 @@ hgroup {
 .button--size-56 {
   width: 56px;
 }
+.button--size-134 {
+  width: 134px;
+}
+.button--size-small {
+  width: 111px;
+  height: 36px;
+  font-size: 13px;
+}
 
 .title {
-  color: var(--colors-light-description-color, #2C2C2C);
+  color: #2C2C2C;
   font-family: Inter;
   font-size: 25px;
   font-style: normal;
@@ -112,10 +120,20 @@ hgroup {
   line-height: normal;
 }
 
-.Buttons__big .bigButtons__title {
+.Buttons__big,
+.Buttons__small {
+  margin-bottom: 80px;
+}
+.Buttons__big .bigButtons__title,
+.Buttons__big .smallButtons__title,
+.Buttons__small .bigButtons__title,
+.Buttons__small .smallButtons__title {
   margin-bottom: 26px;
 }
-.Buttons__big .bigButtons__left {
+.Buttons__big .bigButtons__left,
+.Buttons__big .smallButtons__left,
+.Buttons__small .bigButtons__left,
+.Buttons__small .smallButtons__left {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -127,7 +145,12 @@ hgroup {
   width: 740px;
   gap: 20px;
 }
-.Buttons__big .bigButtons__right {
+.Buttons__big .smallButtons__left,
+.Buttons__small .smallButtons__left {
+  width: 600px;
+}
+.Buttons__big .bigButtons__right,
+.Buttons__small .bigButtons__right {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -136,12 +159,31 @@ hgroup {
           justify-content: space-between;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
-.Buttons__big .bigButtons__container {
+.Buttons__big .bigButtons__right .right__top,
+.Buttons__small .bigButtons__right .right__top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.Buttons__big .bigButtons__right .right__bot,
+.Buttons__small .bigButtons__right .right__bot {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.Buttons__big .bigButtons__container,
+.Buttons__big .smallButtons__container,
+.Buttons__small .bigButtons__container,
+.Buttons__small .smallButtons__container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  gap: 40px;
+  gap: 80px;
 }
